improve schedule encapsulation